--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
       min-height: 100vh;
       position: relative;
     }
+    .teacher-area {
+      position: relative;
+      width: 160px;
+      height: 420px;
+      display: flex;
+      align-items: flex-end;
+      margin-right: 20px;
+    }
     .board-area {
       position: relative;
       width: 700px;
@@ -33,63 +41,16 @@
       align-items: center;
       justify-content: center;
       overflow: hidden;
-    }
-    .chalk-math {
-      color: #fff;
-      font-family: 'Courier New', Courier, monospace;
-      font-size: 1.3rem;
-      white-space: pre-line;
-      opacity: 1;
-      transition: opacity 0.8s cubic-bezier(.4,2,.6,1);
-      position: absolute;
-      left: 40px;
-      top: 60px;
-      z-index: 2;
-      pointer-events: none;
-      text-shadow: 0 2px 0 #bfa76f, 0 0 8px #fff8;
-    }
-    .chalk-math.hide {
-      opacity: 0;
-    }
-    .thought-bubble {
-      position: absolute;
-      left: 60px;
-      top: 20px;
-      background: #fff;
-      color: #333;
-      padding: 18px 28px;
-      border-radius: 40px 40px 40px 0;
-      font-size: 1.1rem;
-      box-shadow: 0 4px 16px #0002;
-      z-index: 3;
-      animation: bubbleIn 1.2s cubic-bezier(.4,2,.6,1);
-    }
-    @keyframes bubbleIn {
-      0% { transform: scale(0.7) translateY(-30px); opacity: 0;}
-      100% { transform: scale(1) translateY(0); opacity: 1;}
-    }
-    .professor {
-      position: absolute;
-      left: -120px;
-      bottom: 0;
-      width: 120px;
-      height: 220px;
-      z-index: 4;
-      /* Simple cartoon SVG */
-    }
-    .professor svg {
-      width: 100%;
-      height: 100%;
-    }
-    .sections-panel {
-      position: absolute;
-      right: -180px;
-      top: 50%;
-      transform: translateY(-50%);
-      display: flex;
       flex-direction: column;
+    }
+    .sections-top {
+      display: flex;
+      justify-content: center;
       gap: 32px;
-      z-index: 5;
+      width: 100%;
+      margin-top: 18px;
+      margin-bottom: 10px;
+      z-index: 10;
     }
     .section-btn {
       background: linear-gradient(90deg, #fffbe7 0%, #ffe082 100%);
@@ -98,7 +59,7 @@
       font-size: 1.1rem;
       border: none;
       border-radius: 30px;
-      padding: 18px 38px;
+      padding: 14px 32px;
       box-shadow: 0 4px 16px #0002;
       cursor: pointer;
       outline: none;
@@ -116,10 +77,27 @@
       50% { box-shadow: 0 0 32px #ffe082cc, 0 0 24px #fff4;}
       100% { box-shadow: 0 0 16px #ffe08288, 0 0 0 #fff0;}
     }
+    .chalk-math {
+      color: #fff;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: 1.3rem;
+      white-space: pre-line;
+      opacity: 1;
+      transition: opacity 0.8s cubic-bezier(.4,2,.6,1);
+      position: absolute;
+      left: 40px;
+      top: 80px;
+      z-index: 2;
+      pointer-events: none;
+      text-shadow: 0 2px 0 #bfa76f, 0 0 8px #fff8;
+    }
+    .chalk-math.hide {
+      opacity: 0;
+    }
     .board-content {
       position: absolute;
       left: 40px;
-      top: 60px;
+      top: 80px;
       right: 40px;
       bottom: 40px;
       color: #fff;
@@ -141,58 +119,71 @@
       0% { opacity: 0; transform: translateY(30px);}
       100% { opacity: 1; transform: translateY(0);}
     }
+    /* Teacher SVG styling */
+    .teacher-svg {
+      width: 160px;
+      height: 420px;
+      display: block;
+    }
     @media (max-width: 900px) {
       .classroom { flex-direction: column; }
+      .teacher-area { width: 90px; height: 220px; margin-right: 0; }
+      .teacher-svg { width: 90px; height: 220px; }
       .board-area { width: 98vw; height: 320px; }
-      .sections-panel { right: 10px; top: 100%; transform: none; flex-direction: row; gap: 12px; margin-top: 24px;}
-      .section-btn { padding: 12px 18px; font-size: 1rem;}
-      .professor { left: 0; width: 80px; height: 140px;}
+      .sections-top { gap: 10px; }
+      .section-btn { padding: 10px 14px; font-size: 1rem;}
     }
   </style>
 </head>
 <body>
   <div class="classroom">
+    <div class="teacher-area">
+      <!-- Cartoon teacher SVG with stick pointing to board -->
+      <svg class="teacher-svg" viewBox="0 0 160 420" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <!-- Body -->
+        <ellipse cx="80" cy="340" rx="55" ry="60" fill="#ffe082" stroke="#bfa76f" stroke-width="6"/>
+        <!-- Head -->
+        <ellipse cx="80" cy="170" rx="60" ry="70" fill="#ffe082" stroke="#bfa76f" stroke-width="6"/>
+        <!-- Eyes -->
+        <ellipse cx="60" cy="160" rx="8" ry="12" fill="#fff"/>
+        <ellipse cx="100" cy="160" rx="8" ry="12" fill="#fff"/>
+        <ellipse cx="60" cy="163" rx="3" ry="5" fill="#222"/>
+        <ellipse cx="100" cy="163" rx="3" ry="5" fill="#222"/>
+        <!-- Smile -->
+        <path d="M65 190 Q80 205 95 190" stroke="#bfa76f" stroke-width="4" fill="none"/>
+        <!-- Left arm (down) -->
+        <rect x="20" y="250" width="18" height="80" rx="9" fill="#ffe082" stroke="#bfa76f" stroke-width="4" transform="rotate(-10 20 250)"/>
+        <!-- Right arm (up, holding stick) -->
+        <rect x="122" y="250" width="18" height="80" rx="9" fill="#ffe082" stroke="#bfa76f" stroke-width="4" transform="rotate(25 122 250)"/>
+        <!-- Stick -->
+        <rect x="140" y="220" width="8" height="120" rx="4" fill="#bfa76f" stroke="#bfa76f" stroke-width="2" transform="rotate(25 140 220)"/>
+        <!-- Shirt collar -->
+        <polygon points="70,220 90,220 80,240" fill="#fffbe7"/>
+        <!-- Glasses -->
+        <ellipse cx="60" cy="160" rx="12" ry="14" fill="none" stroke="#bfa76f" stroke-width="2"/>
+        <ellipse cx="100" cy="160" rx="12" ry="14" fill="none" stroke="#bfa76f" stroke-width="2"/>
+        <rect x="72" y="160" width="16" height="2" fill="#bfa76f"/>
+      </svg>
+    </div>
     <div class="board-area">
+      <div class="sections-top">
+        <button class="section-btn" onclick="showSection('about')">About Me</button>
+        <button class="section-btn" onclick="showSection('teaching')">Teaching</button>
+        <button class="section-btn" onclick="showSection('research')">Research</button>
+        <button class="section-btn" onclick="showSection('education')">Education</button>
+      </div>
       <div class="chalk-math" id="chalkMath">
         { n ∈ ℕ : ∃ a, b ∈ ℤ, n = a² + b² }
         π(x) ~ x / log(x)
         gcd(a, b) = gcd(b, a mod b)
         φ(n) = n ∏_{p|n} (1 - 1/p)
       </div>
-      <div class="thought-bubble" id="bubble">
-        Hi, How can I help?<br>
-        Please select the section you want to know about.
-      </div>
-      <div class="professor">
-        <!-- Simple SVG cartoon professor with a duggle (thought bubble) -->
-        <svg viewBox="0 0 120 220">
-          <ellipse cx="60" cy="180" rx="40" ry="20" fill="#bfa76f"/>
-          <circle cx="60" cy="90" r="50" fill="#ffe082" stroke="#bfa76f" stroke-width="4"/>
-          <ellipse cx="60" cy="160" rx="30" ry="40" fill="#ffe082" stroke="#bfa76f" stroke-width="4"/>
-          <ellipse cx="45" cy="80" rx="8" ry="12" fill="#fff"/>
-          <ellipse cx="75" cy="80" rx="8" ry="12" fill="#fff"/>
-          <ellipse cx="45" cy="82" rx="3" ry="5" fill="#222"/>
-          <ellipse cx="75" cy="82" rx="3" ry="5" fill="#222"/>
-          <ellipse cx="60" cy="110" rx="12" ry="6" fill="#fff"/>
-          <ellipse cx="60" cy="112" rx="8" ry="3" fill="#bfa76f"/>
-          <rect x="50" y="130" width="20" height="30" rx="8" fill="#bfa76f"/>
-          <rect x="30" y="170" width="15" height="40" rx="7" fill="#ffe082"/>
-          <rect x="75" y="170" width="15" height="40" rx="7" fill="#ffe082"/>
-        </svg>
-      </div>
       <div class="board-content" id="boardContent"></div>
-      <div class="sections-panel">
-        <button class="section-btn" onclick="showSection('about')">About Me</button>
-        <button class="section-btn" onclick="showSection('education')">Education</button>
-        <button class="section-btn" onclick="showSection('teaching')">Teaching</button>
-        <button class="section-btn" onclick="showSection('research')">Research</button>
-      </div>
     </div>
   </div>
   <script>
     const chalkMath = document.getElementById('chalkMath');
     const boardContent = document.getElementById('boardContent');
-    const bubble = document.getElementById('bubble');
     const sections = {
       about: `👋 Hello! I'm Dr. A. Sharma, Assistant Professor of Mathematics.
 I am passionate about teaching, research, and inspiring students to explore the beauty of numbers and logic.
@@ -217,10 +208,7 @@ My research focuses on:
 I have published in leading journals and regularly present at international conferences.`
     };
     function showSection(section) {
-      // Wipe out math and bubble
       chalkMath.classList.add('hide');
-      bubble.style.display = 'none';
-      // Show content with animation
       boardContent.innerText = sections[section];
       setTimeout(() => {
         boardContent.classList.add('show');
