--- a/index.html
+++ b/index.html
@@ -163,30 +163,80 @@
       0% { opacity: 0; transform: translateY(30px);}
       100% { opacity: 1; transform: translateY(0);}
     }
-    /* Erase animation overlay */
+    /* Duster animation overlay */
     .erase-overlay {
       position: absolute;
       left: 0; top: 0; right: 0; bottom: 0;
       width: 100%; height: 100%;
-      background: repeating-linear-gradient(
-        90deg,
-        #181818 0px, #181818 30px,
-        #232323 30px, #232323 60px
-      );
       z-index: 10;
       pointer-events: none;
       opacity: 0;
       transition: opacity 0.2s;
       animation: none;
+      overflow: visible;
     }
     .erase-overlay.active {
       opacity: 1;
-      animation: eraseWipe 0.7s cubic-bezier(.4,2,.6,1) forwards;
+      animation: eraseWipe 0.9s cubic-bezier(.4,2,.6,1) forwards;
+    }
+    /* Duster SVG animation */
+    .duster {
+      position: absolute;
+      width: 70px;
+      height: 40px;
+      left: -80px;
+      top: 320px;
+      z-index: 11;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s;
+    }
+    .erase-overlay.active .duster {
+      animation: dusterMove 0.9s cubic-bezier(.4,2,.6,1) forwards;
+      opacity: 1;
     }
     @keyframes eraseWipe {
       0% { clip-path: inset(0 100% 0 0); }
       80% { clip-path: inset(0 0 0 0); }
       100% { opacity: 0; clip-path: inset(0 0 0 0);}
+    }
+    @keyframes dusterMove {
+      0% {
+        left: -80px;
+        top: 320px;
+        opacity: 1;
+        transform: rotate(-10deg) scale(1.1);
+      }
+      10% {
+        left: 10px;
+        top: 320px;
+        opacity: 1;
+        transform: rotate(-10deg) scale(1.1);
+      }
+      30% {
+        left: 200px;
+        top: 250px;
+        opacity: 1;
+        transform: rotate(-5deg) scale(1.05);
+      }
+      60% {
+        left: 400px;
+        top: 180px;
+        opacity: 1;
+        transform: rotate(0deg) scale(1);
+      }
+      80% {
+        left: 600px;
+        top: 120px;
+        opacity: 1;
+        transform: rotate(5deg) scale(1);
+      }
+      100% {
+        left: 800px;
+        top: 80px;
+        opacity: 0;
+        transform: rotate(10deg) scale(0.9);
+      }
     }
     @media (max-width: 900px) {
       .main-content { flex-direction: column; align-items: center; }
@@ -197,6 +247,7 @@
       .sections-top { gap: 10px; }
       .section-btn { padding: 10px 14px; font-size: 1rem;}
       .chalk-math, .board-content { font-size: 1rem; left: 20px; right: 20px; top: 30px; bottom: 20px;}
+      .duster { width: 40px; height: 24px; }
     }
   </style>
 </head>
@@ -222,7 +273,15 @@
         φ(n) = n ∏_{p|n} (1 - 1/p)
       </div>
       <div class="board-content" id="boardContent"></div>
-      <div class="erase-overlay" id="eraseOverlay"></div>
+      <div class="erase-overlay" id="eraseOverlay">
+        <!-- Duster SVG (eraser) -->
+        <svg class="duster" viewBox="0 0 70 40">
+          <rect x="5" y="15" width="60" height="18" rx="6" fill="#e0b97d" stroke="#bfa76f" stroke-width="2"/>
+          <rect x="10" y="20" width="50" height="8" rx="3" fill="#bfa76f" opacity="0.7"/>
+          <ellipse cx="35" cy="32" rx="22" ry="5" fill="#bfa76f" opacity="0.3"/>
+          <rect x="5" y="10" width="60" height="8" rx="4" fill="#fff" opacity="0.18"/>
+        </svg>
+      </div>
     </div>
   </div>
   <script>
@@ -272,7 +331,7 @@ I have published in leading journals and regularly present at international conf
         chalkMath.classList.add('hide');
         eraseOverlay.classList.remove('active');
         currentSection = section;
-      }, 700);
+      }, 900);
     }
 
     // On first load, show chalkMath
