--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
       min-height: 100vh;
       font-family: 'Montserrat', sans-serif;
       overflow-x: hidden;
-      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1200&q=80') no-repeat center center fixed;
-      background-size: cover;
-      background-color: #e0eafc;
+      /* Brick wall background (seamless, free) */
+      background: url('https://www.transparenttextures.com/patterns/brick-wall.png'), #b36a4c;
+      background-repeat: repeat;
+      background-size: auto;
+      background-attachment: fixed;
     }
     .bg-overlay {
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(255,255,255,0.45);
+      background: rgba(255,255,255,0.25);
       z-index: 0;
       pointer-events: none;
     }
